objects/DAZN_Country_Localized_Month__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Language_Code__c</fullName>
        <label>Language Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Month_In_Local_Lang__c</fullName>
        <label>Month In Local Lang</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Month_In_Number__c</fullName>
        <label>Month In Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>DAZN_Country_Localized_Month</label>
</CustomObject>